# uv-build-locked

./: README.rst  pyproject.toml
src/pdm_build_locked/: _utils.py
tests/data/lock-hatchling/: pyproject.toml
tests/unit/: test_backend.py
